{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 5,
  "lineage": "b94b00cd-767c-086e-28c6-985784f2b3b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_region1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0953476d60561c955",
            "arn": "arn:aws:ec2:us-east-1:075617906556:instance/i-0c838ca8aeb6fd60a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c838ca8aeb6fd60a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0079fa93d2717d8e4",
            "private_dns": "ip-172-31-94-39.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.94.39",
            "public_dns": "ec2-3-82-211-206.compute-1.amazonaws.com",
            "public_ip": "3.82.211.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ca60099d79b957b2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow-all-traffic-region1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b95c458f19e9cdc4",
            "tags": {
              "Name": "nginx-region-1"
            },
            "tags_all": {
              "Name": "nginx-region-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-070efb1ede7d097d0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.open_all_region1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_region2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04999cd8f2624f834",
            "arn": "arn:aws:ec2:us-west-2:075617906556:instance/i-046c5150800c1c334",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046c5150800c1c334",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e9c461668ff0a8ab",
            "private_dns": "ip-172-31-40-0.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.40.0",
            "public_dns": "ec2-34-219-182-48.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.182.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f632aa90ecaa9ddb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow-all-traffic-region2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0546cdbc7c6ac9f36",
            "tags": {
              "Name": "nginx-region-2"
            },
            "tags_all": {
              "Name": "nginx-region-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02d7b4f72e203d198"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.open_all_region2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "open_all_region1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075617906556:security-group/sg-070efb1ede7d097d0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070efb1ede7d097d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-traffic-region1",
            "name_prefix": "",
            "owner_id": "075617906556",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01517c5b7216a4e5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "open_all_region2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:075617906556:security-group/sg-02d7b4f72e203d198",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d7b4f72e203d198",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-traffic-region2",
            "name_prefix": "",
            "owner_id": "075617906556",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06af73464c966a5f9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}